add world icon tab / change certificate hackerrank

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Fonts CSS-->
     <link rel="stylesheet" href="css/heading.css">
     <link rel="stylesheet" href="css/body.css">
+    <link rel="icon" href="assets/img/world.png">
 </head>
 
 <body id="page-top">
@@ -485,6 +486,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <p class="mb-3">
+                                    <h5>Java(basic) and SQL, JS, CSS</h5>
                                     <h5>Source : <a href="https://www.hackerrank.com/certificates/b8e488345933"> Click here!</a></h5>
                                 </p>
                                 <img class="img-fluid" src="assets/img/certificated/hackerrnk(java).png" alt="devlab" />
